creacion de categoria y tabla

--- a/PeliculasApi/appsettings.json
+++ b/PeliculasApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ConexionSql": "Server=RYUJIN\\RYUJIN;Database=ApiPeliculasNet;User ID=sa;Password=ryujin;Trusted_Connection=true;TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
